--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
       rel="stylesheet"
     />
     <!-- Main CSS -->
+    <link rel="shortcut icon" href="img/ficon.png" type="image/x-icon" />
+
     <link rel="stylesheet" href="css/style.css" />
   </head>
 
