--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
     <!-- Main Calculator Area End -->
     <footer>
         BTEB CGPA Calculator &copy; <span id="current_year"></span> | Developed By
-        <a href="https://github.com/developerhasibbd24" target="_blank">Md. Hasib</a>
+        <a href="https://www.facebook.com/developerhasibbd" target="_blank">Md. Hasib</a>
     </footer>
     <!-- **** Java Script ***** -->
     <script type="text/javascript" src="js/script.js"></script>
